[gd_scene load_steps=85 format=3 uid="uid://duxsyfskxdlf3"]

[ext_resource type="Script" path="res://game/player/player.gd" id="1_msn3r"]
[ext_resource type="Script" path="res://game/player/components/attacks/player_attack_manager.gd" id="2_0x4jq"]
[ext_resource type="PackedScene" uid="uid://bg50i53wie1sx" path="res://game/gui/gui.tscn" id="2_c5wfi"]
[ext_resource type="Script" path="res://game/player/components/interactables/player_interactor_component.gd" id="2_q8f32"]
[ext_resource type="Script" path="res://shared/components/move/move_data.gd" id="3_7ycnr"]
[ext_resource type="Script" path="res://shared/components/states/state_machine.gd" id="3_8188k"]
[ext_resource type="Shader" path="res://shared/materials/glow_effect/glow_effect.gdshader" id="4_m6he1"]
[ext_resource type="Script" path="res://game/player/components/states/dash.gd" id="4_noi8l"]
[ext_resource type="Script" path="res://game/player/components/attacks/player_ability_input_component.gd" id="4_o1kg2"]
[ext_resource type="Script" path="res://game/player/components/states/die.gd" id="5_1w3nl"]
[ext_resource type="Script" path="res://shared/components/camera/my_camera.gd" id="5_2i0cb"]
[ext_resource type="Script" path="res://game/player/components/movements/player_move_input_component.gd" id="5_bbfuc"]
[ext_resource type="Script" path="res://shared/components/stats/health_component.gd" id="5_nbbkh"]
[ext_resource type="Script" path="res://game/player/components/states/fall.gd" id="6_0uwup"]
[ext_resource type="Script" path="res://shared/components/stats/energy_component.gd" id="6_1m6jn"]
[ext_resource type="Script" path="res://game/player/components/states/hit.gd" id="7_86s88"]
[ext_resource type="Script" path="res://game/player/components/states/idle.gd" id="8_eankw"]
[ext_resource type="Script" path="res://game/player/components/states/jump.gd" id="9_4m1xy"]
[ext_resource type="Script" path="res://game/player/components/states/walk.gd" id="10_03hiq"]
[ext_resource type="Texture2D" uid="uid://due0r7ow5iccy" path="res://game/player/art/Fall/Fall_Épée_Ok-1.png" id="13_e4cys"]
[ext_resource type="Texture2D" uid="uid://iukbpba3oxbe" path="res://game/player/art/Fall/Fall_Épée_Ok-2.png" id="14_chcyb"]
[ext_resource type="Texture2D" uid="uid://crgpg6qvd5rk8" path="res://game/player/art/Fall/Fall_Épée_Ok-3.png" id="15_e0l47"]
[ext_resource type="Texture2D" uid="uid://d0hgo5ma5hxxg" path="res://game/player/art/Fall/Fall_Épée_Ok-4.png" id="16_8lxmi"]
[ext_resource type="Texture2D" uid="uid://dv74xspqxldy5" path="res://game/player/art/Fall/Fall_Épée_Ok-5.png" id="17_6atnu"]
[ext_resource type="Texture2D" uid="uid://c2navf76171rm" path="res://game/player/art/Fall/Fall_Épée_Ok-6.png" id="18_u46ow"]
[ext_resource type="Texture2D" uid="uid://ceoxq5qb5q7il" path="res://game/player/art/Fall/Fall_Épée_Ok-7.png" id="19_m6krp"]
[ext_resource type="Texture2D" uid="uid://cn7ppmja12d7r" path="res://game/player/art/Fall/Fall_Épée_Ok-8.png" id="20_ocaqm"]
[ext_resource type="Texture2D" uid="uid://byava1fss3gkg" path="res://game/player/art/jump/Jump+epee_Ok-7.png" id="21_3uk01"]
[ext_resource type="Texture2D" uid="uid://c4kg0emcebfrl" path="res://game/player/art/jump/Jump+epee_Ok-1.png" id="25_rht8b"]
[ext_resource type="Texture2D" uid="uid://b4otdkmfdj1db" path="res://game/player/art/jump/Jump+epee_Ok-2.png" id="26_bmm6p"]
[ext_resource type="Texture2D" uid="uid://dbkq4fy6ksd0g" path="res://game/player/art/idle/Idle+epee_Ok-1.png" id="26_ydg7v"]
[ext_resource type="Texture2D" uid="uid://c4bcqjqq7dx3o" path="res://game/player/art/idle/Idle+epee_Ok-2.png" id="27_70ob6"]
[ext_resource type="Texture2D" uid="uid://dajqkn7ujbavr" path="res://game/player/art/jump/Jump+epee_Ok-3.png" id="27_xwocj"]
[ext_resource type="Texture2D" uid="uid://c6lic7q2kmhe6" path="res://game/player/art/idle/Idle+epee_Ok-3.png" id="28_mrq73"]
[ext_resource type="Texture2D" uid="uid://dodbdcw4d7l34" path="res://game/player/art/jump/Jump+epee_Ok-4.png" id="28_myxda"]
[ext_resource type="Texture2D" uid="uid://cx1vf8ey0feo8" path="res://game/player/art/jump/Jump+epee_Ok-5.png" id="29_k4t4e"]
[ext_resource type="Texture2D" uid="uid://d3i05hjj78khr" path="res://game/player/art/jump/Jump+epee_Ok-6.png" id="30_lso84"]
[ext_resource type="Texture2D" uid="uid://2ewqh2863nro" path="res://game/player/art/attack simple1/Attack_Simple1-2.png" id="31_e8oxd"]
[ext_resource type="Texture2D" uid="uid://bdds08lqge1pm" path="res://game/player/art/attack simple1/Attack_Simple1-3.png" id="32_mvspe"]
[ext_resource type="Texture2D" uid="uid://v7cm72u1o3di" path="res://game/player/art/attack simple1/Attack_Simple1-4.png" id="33_85ng5"]
[ext_resource type="Texture2D" uid="uid://doeu4kvfi4fv1" path="res://game/player/art/attack simple1/Attack_Simple1-5.png" id="34_dqphw"]
[ext_resource type="Texture2D" uid="uid://cscrn0641v1vf" path="res://game/player/art/attack simple1/Attack_Simple1-7.png" id="35_kt1h7"]
[ext_resource type="Texture2D" uid="uid://y0h3ly0lq67a" path="res://game/player/art/attack simple1/Attack_Simple1-9.png" id="36_o56gq"]
[ext_resource type="Texture2D" uid="uid://t40uy1a441rw" path="res://game/player/art/attack simple2/Attack_Simple_2-2.png" id="37_37hrs"]
[ext_resource type="Texture2D" uid="uid://r6m66eicu0dm" path="res://game/player/art/attack simple2/Attack_Simple_2-3.png" id="38_nlc3a"]
[ext_resource type="Texture2D" uid="uid://tx7uacfgyo67" path="res://game/player/art/attack simple2/Attack_Simple_2-4.png" id="39_m170e"]
[ext_resource type="Texture2D" uid="uid://gccoyurgmgtt" path="res://game/player/art/attack simple2/Attack_Simple_2-5.png" id="40_wnayv"]
[ext_resource type="Texture2D" uid="uid://byuirb2bfhjmn" path="res://game/player/art/attack simple2/Attack_Simple_2-6.png" id="41_5r516"]
[ext_resource type="Texture2D" uid="uid://d34gwcmtbk1g2" path="res://game/player/art/attack combo epee lazer/Attack_Combo-7.png" id="42_7n020"]
[ext_resource type="Texture2D" uid="uid://dtami7t4gps1s" path="res://game/player/art/attack combo epee lazer/Attack_Combo-8.png" id="43_hhib5"]
[ext_resource type="Texture2D" uid="uid://bh8p4p2dea61p" path="res://game/player/art/attack combo epee lazer/Attack_Combo-9.png" id="44_gmvkp"]
[ext_resource type="Texture2D" uid="uid://bhjgq1uj60om" path="res://game/player/art/attack combo epee lazer/Attack_Combo-10.png" id="45_0dysp"]
[ext_resource type="Texture2D" uid="uid://d37ed555tkayn" path="res://game/player/art/attack combo epee lazer/Attack_Combo-11.png" id="46_f6g4d"]
[ext_resource type="Texture2D" uid="uid://citvmp7ocfylu" path="res://game/player/art/Run/Run+epe_Ok_-1.png" id="47_kvhx2"]
[ext_resource type="Texture2D" uid="uid://bo8m6i2ojaa0b" path="res://game/player/art/Run/Run+epe_Ok_-2.png" id="48_f8kmk"]
[ext_resource type="Texture2D" uid="uid://br48djixupfdp" path="res://game/player/art/Run/Run+epe_Ok_-3.png" id="49_wiuim"]
[ext_resource type="Texture2D" uid="uid://bdn4u2tc7w4n8" path="res://game/player/art/Run/Run+epe_Ok_-4.png" id="50_mb3io"]
[ext_resource type="Texture2D" uid="uid://bct1dw63ppw0u" path="res://game/player/art/Run/Run+epe_Ok_-5.png" id="51_sr3bl"]
[ext_resource type="Texture2D" uid="uid://3kdd6bmv37e8" path="res://game/player/art/Run/Run+epe_Ok_-6.png" id="52_120ry"]
[ext_resource type="Texture2D" uid="uid://chl505aj4y1ur" path="res://game/player/art/Run/Run+epe_Ok_-7.png" id="53_53nu1"]
[ext_resource type="Texture2D" uid="uid://hsy41t62jcpa" path="res://game/player/art/Run/Run+epe_Ok_-8.png" id="54_y6i8o"]
[ext_resource type="Script" path="res://shared/components/attacks/attack_holder.gd" id="58_d7eiw"]
[ext_resource type="PackedScene" uid="uid://bb3jrenjx6t7y" path="res://game/player/components/attacks/sword/sword_1.tscn" id="59_546gv"]
[ext_resource type="Script" path="res://shared/components/attacks/attack_data.gd" id="59_hfdwx"]
[ext_resource type="Script" path="res://shared/components/attacks/energy_attack_holder.gd" id="60_3qfbr"]
[ext_resource type="PackedScene" uid="uid://x1u1mr7yevef" path="res://game/player/components/attacks/hand/hand.tscn" id="62_detxh"]
[ext_resource type="Script" path="res://game/player/components/states/ability.gd" id="74_6efk3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_trxky"]
size = Vector2(136, 243)

[sub_resource type="Animation" id="Animation_nwt0g"]
resource_name = "arm"

[sub_resource type="Animation" id="Animation_vxab7"]
resource_name = "dash"

[sub_resource type="Animation" id="Animation_mekx8"]
resource_name = "die"

[sub_resource type="Animation" id="Animation_dk6ef"]
resource_name = "fall"

[sub_resource type="Animation" id="Animation_f1qdp"]
resource_name = "hand"

[sub_resource type="Animation" id="Animation_c87bg"]
resource_name = "hit"

[sub_resource type="Animation" id="Animation_hcmfn"]
resource_name = "idle"

[sub_resource type="Animation" id="Animation_emopd"]
resource_name = "jump"

[sub_resource type="Animation" id="Animation_is6y3"]
resource_name = "sword_1"

[sub_resource type="Animation" id="Animation_pmpty"]
resource_name = "sword_2"

[sub_resource type="Animation" id="Animation_d86ax"]
resource_name = "sword_3"

[sub_resource type="Animation" id="Animation_3c8e8"]
resource_name = "walk"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0aoxb"]
_data = {
"arm": SubResource("Animation_nwt0g"),
"dash": SubResource("Animation_vxab7"),
"die": SubResource("Animation_mekx8"),
"fall": SubResource("Animation_dk6ef"),
"hand": SubResource("Animation_f1qdp"),
"hit": SubResource("Animation_c87bg"),
"idle": SubResource("Animation_hcmfn"),
"jump": SubResource("Animation_emopd"),
"sword_1": SubResource("Animation_is6y3"),
"sword_2": SubResource("Animation_pmpty"),
"sword_3": SubResource("Animation_d86ax"),
"walk": SubResource("Animation_3c8e8")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_asghs"]
shader = ExtResource("4_m6he1")
shader_parameter/color1 = Color(0.729412, 0.988235, 1, 1)
shader_parameter/color2 = Color(0.729412, 0.988235, 1, 1)
shader_parameter/threshold = 0.46
shader_parameter/intensity = 3.0
shader_parameter/opacity = 1.0
shader_parameter/glow_color = Color(0.729412, 0.988235, 1, 1)

[sub_resource type="SpriteFrames" id="SpriteFrames_u75w7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("46_f6g4d")
}, {
"duration": 1.0,
"texture": ExtResource("46_f6g4d")
}, {
"duration": 1.0,
"texture": ExtResource("46_f6g4d")
}, {
"duration": 1.0,
"texture": ExtResource("46_f6g4d")
}, {
"duration": 1.0,
"texture": ExtResource("46_f6g4d")
}],
"loop": false,
"name": &"arm",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("25_rht8b")
}],
"loop": true,
"name": &"dash",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_e4cys")
}, {
"duration": 1.0,
"texture": ExtResource("14_chcyb")
}, {
"duration": 1.0,
"texture": ExtResource("15_e0l47")
}, {
"duration": 1.0,
"texture": ExtResource("16_8lxmi")
}, {
"duration": 1.0,
"texture": ExtResource("17_6atnu")
}, {
"duration": 1.0,
"texture": ExtResource("18_u46ow")
}, {
"duration": 1.0,
"texture": ExtResource("19_m6krp")
}, {
"duration": 1.0,
"texture": ExtResource("20_ocaqm")
}],
"loop": false,
"name": &"die",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("21_3uk01")
}],
"loop": true,
"name": &"fall",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("46_f6g4d")
}, {
"duration": 1.0,
"texture": ExtResource("46_f6g4d")
}],
"loop": false,
"name": &"hand",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_chcyb")
}, {
"duration": 1.0,
"texture": ExtResource("15_e0l47")
}, {
"duration": 1.0,
"texture": ExtResource("16_8lxmi")
}, {
"duration": 1.0,
"texture": ExtResource("15_e0l47")
}, {
"duration": 1.0,
"texture": ExtResource("14_chcyb")
}],
"loop": false,
"name": &"hit",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("26_ydg7v")
}, {
"duration": 1.0,
"texture": ExtResource("27_70ob6")
}, {
"duration": 1.0,
"texture": ExtResource("28_mrq73")
}, {
"duration": 1.0,
"texture": ExtResource("27_70ob6")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("25_rht8b")
}, {
"duration": 1.0,
"texture": ExtResource("26_bmm6p")
}, {
"duration": 1.0,
"texture": ExtResource("27_xwocj")
}, {
"duration": 1.0,
"texture": ExtResource("28_myxda")
}, {
"duration": 1.0,
"texture": ExtResource("29_k4t4e")
}, {
"duration": 1.0,
"texture": ExtResource("30_lso84")
}],
"loop": false,
"name": &"jump",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("31_e8oxd")
}, {
"duration": 1.0,
"texture": ExtResource("32_mvspe")
}, {
"duration": 1.0,
"texture": ExtResource("33_85ng5")
}, {
"duration": 1.0,
"texture": ExtResource("34_dqphw")
}, {
"duration": 1.0,
"texture": ExtResource("35_kt1h7")
}, {
"duration": 1.0,
"texture": ExtResource("36_o56gq")
}],
"loop": false,
"name": &"sword_1",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("37_37hrs")
}, {
"duration": 1.0,
"texture": ExtResource("38_nlc3a")
}, {
"duration": 1.0,
"texture": ExtResource("39_m170e")
}, {
"duration": 1.0,
"texture": ExtResource("40_wnayv")
}, {
"duration": 1.0,
"texture": ExtResource("41_5r516")
}],
"loop": false,
"name": &"sword_2",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("42_7n020")
}, {
"duration": 1.0,
"texture": ExtResource("43_hhib5")
}, {
"duration": 1.0,
"texture": ExtResource("44_gmvkp")
}, {
"duration": 1.0,
"texture": ExtResource("45_0dysp")
}],
"loop": false,
"name": &"sword_3",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("47_kvhx2")
}, {
"duration": 1.0,
"texture": ExtResource("48_f8kmk")
}, {
"duration": 1.0,
"texture": ExtResource("49_wiuim")
}, {
"duration": 1.0,
"texture": ExtResource("50_mb3io")
}, {
"duration": 1.0,
"texture": ExtResource("51_sr3bl")
}, {
"duration": 1.0,
"texture": ExtResource("52_120ry")
}, {
"duration": 1.0,
"texture": ExtResource("53_53nu1")
}, {
"duration": 1.0,
"texture": ExtResource("54_y6i8o")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_jjjul"]
radius = 290.629

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("movement_state_machine", "movement_animator", "animated_sprite", "move_input_component", "health_component", "move_data", "attack_manager", "interactor_component", "bot_pos", "mid_pos", "camera", "need_dir")]
collision_layer = 8
safe_margin = 0.2
script = ExtResource("1_msn3r")
movement_state_machine = NodePath("Components/StateMachine")
movement_animator = NodePath("MovementAnimator")
animated_sprite = NodePath("Components2D/AnimatedSprite")
move_input_component = NodePath("Components/Inputs/MoveInputComponent")
health_component = NodePath("Components/Datas/HealthComponent")
move_data = NodePath("Components/Datas/MoveData")
attack_manager = NodePath("Components2D/PlayerAttackManager")
interactor_component = NodePath("Components2D/PlayerInteractorComponent")
bot_pos = NodePath("Components2D/OtherStuff/BotPos")
mid_pos = NodePath("Components2D/OtherStuff/MidPos")
camera = NodePath("Camera")
need_dir = [NodePath("Components2D/AnimatedSprite"), NodePath("Components2D/PlayerInteractorComponent"), NodePath("Components2D/PlayerAttackManager")]

[node name="GUI" parent="." node_paths=PackedStringArray("energy_component", "health_component", "energy_ability") instance=ExtResource("2_c5wfi")]
energy_component = NodePath("../Components/Datas/EnergyComponent")
health_component = NodePath("../Components/Datas/HealthComponent")
energy_ability = NodePath("../Components2D/PlayerAttackManager/hand")

[node name="Camera" type="Camera2D" parent="."]
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_bottom_margin = 0.0
editor_draw_limits = true
editor_draw_drag_margin = true
script = ExtResource("5_2i0cb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 95.5)
shape = SubResource("RectangleShape2D_trxky")

[node name="MovementAnimator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0aoxb")
}

[node name="Components2D" type="Node2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="Components2D"]
material = SubResource("ShaderMaterial_asghs")
sprite_frames = SubResource("SpriteFrames_u75w7")
animation = &"idle"

[node name="PlayerInteractorComponent" type="Area2D" parent="Components2D" node_paths=PackedStringArray("player")]
script = ExtResource("2_q8f32")
player = NodePath("../..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Components2D/PlayerInteractorComponent"]
shape = SubResource("CircleShape2D_jjjul")

[node name="OtherStuff" type="Node2D" parent="Components2D"]

[node name="BotPos" type="Marker2D" parent="Components2D/OtherStuff"]

[node name="MidPos" type="Marker2D" parent="Components2D/OtherStuff"]

[node name="PlayerAttackManager" type="Node2D" parent="Components2D" node_paths=PackedStringArray("swords", "hand", "arm", "attack_input_component", "energy_component")]
script = ExtResource("2_0x4jq")
combo_time = 1.5
swords = [NodePath("sword_1"), NodePath("sword_2"), NodePath("sword_3")]
hand = NodePath("hand")
arm = NodePath("arm")
attack_input_component = NodePath("../../Components/Inputs/AbilityInputComponent")
energy_component = NodePath("../../Components/Datas/EnergyComponent")
attack_interval_time = 0.5
attack_buffer_time = 0.3
can_attack_buffer_time = 0.15

[node name="sword_1" type="Node2D" parent="Components2D/PlayerAttackManager" node_paths=PackedStringArray("attack_data", "ability")]
script = ExtResource("58_d7eiw")
attack_data = NodePath("AttackData")
attack_scene = ExtResource("59_546gv")
cooldown = 0.25
ability = NodePath("../../../Components/StateMachine/ability")

[node name="AttackData" type="Node" parent="Components2D/PlayerAttackManager/sword_1"]
script = ExtResource("59_hfdwx")
team = 1
damage = 1.0

[node name="sword_2" type="Node2D" parent="Components2D/PlayerAttackManager" node_paths=PackedStringArray("attack_data", "ability")]
script = ExtResource("58_d7eiw")
attack_data = NodePath("../sword_1/AttackData")
attack_scene = ExtResource("59_546gv")
cooldown = 0.25
ability = NodePath("../../../Components/StateMachine/ability")

[node name="AttackData" type="Node" parent="Components2D/PlayerAttackManager/sword_2"]
script = ExtResource("59_hfdwx")
team = 1
damage = 1.0

[node name="sword_3" type="Node2D" parent="Components2D/PlayerAttackManager" node_paths=PackedStringArray("attack_data", "ability")]
script = ExtResource("58_d7eiw")
attack_data = NodePath("../sword_1/AttackData")
attack_scene = ExtResource("59_546gv")
cooldown = 0.15
ability = NodePath("../../../Components/StateMachine/ability")

[node name="AttackData" type="Node" parent="Components2D/PlayerAttackManager/sword_3"]
script = ExtResource("59_hfdwx")
team = 1
damage = 3.0

[node name="hand" type="Node2D" parent="Components2D/PlayerAttackManager" node_paths=PackedStringArray("attack_data", "ability")]
script = ExtResource("60_3qfbr")
energy_cost = 3.0
attack_data = NodePath("AttackData")
attack_scene = ExtResource("62_detxh")
cooldown = 0.25
ability = NodePath("../../../Components/StateMachine/ability")

[node name="AttackData" type="Node" parent="Components2D/PlayerAttackManager/hand"]
script = ExtResource("59_hfdwx")
team = 1
damage = 2.0

[node name="arm" type="Node2D" parent="Components2D/PlayerAttackManager" node_paths=PackedStringArray("attack_data", "ability")]
script = ExtResource("60_3qfbr")
energy_cost = 9.0
attack_data = NodePath("AttackData")
attack_scene = ExtResource("62_detxh")
cooldown = 3.0
ability = NodePath("../../../Components/StateMachine/ability")

[node name="AttackData" type="Node" parent="Components2D/PlayerAttackManager/arm"]
script = ExtResource("59_hfdwx")
team = 1
damage = 9.0

[node name="Components" type="Node" parent="."]

[node name="Datas" type="Node" parent="Components"]

[node name="MoveData" type="Node" parent="Components/Datas"]
script = ExtResource("3_7ycnr")
jump_peak_slow_gravity_threshold = 200.0
jump_peak_slow_gravity_coef = 0.8

[node name="HealthComponent" type="Node" parent="Components/Datas"]
script = ExtResource("5_nbbkh")
max_health = 4.0
health = 4.0

[node name="EnergyComponent" type="Node" parent="Components/Datas"]
script = ExtResource("6_1m6jn")
max_energy = 9.0
energy = 3.0

[node name="Inputs" type="Node" parent="Components"]

[node name="AbilityInputComponent" type="Node" parent="Components/Inputs"]
script = ExtResource("4_o1kg2")

[node name="MoveInputComponent" type="Node" parent="Components/Inputs"]
script = ExtResource("5_bbfuc")

[node name="StateMachine" type="Node" parent="Components" node_paths=PackedStringArray("starting_state")]
script = ExtResource("3_8188k")
starting_state = NodePath("idle")

[node name="dash" type="Node" parent="Components/StateMachine" node_paths=PackedStringArray("idle", "walk", "jump", "fall", "dash")]
script = ExtResource("4_noi8l")
idle = NodePath("../idle")
walk = NodePath("../walk")
jump = NodePath("../jump")
fall = NodePath("../fall")
dash = NodePath(".")

[node name="die" type="Node" parent="Components/StateMachine" node_paths=PackedStringArray("ability_input_component")]
script = ExtResource("5_1w3nl")
ability_input_component = NodePath("../../Inputs/AbilityInputComponent")

[node name="fall" type="Node" parent="Components/StateMachine" node_paths=PackedStringArray("idle", "walk", "jump", "dash")]
script = ExtResource("6_0uwup")
idle = NodePath("../idle")
walk = NodePath("../walk")
jump = NodePath("../jump")
dash = NodePath("../dash")

[node name="hit" type="Node" parent="Components/StateMachine" node_paths=PackedStringArray("idle", "die", "attack_input_component", "attack_manager")]
script = ExtResource("7_86s88")
idle = NodePath("../idle")
die = NodePath("../die")
attack_input_component = NodePath("../../Inputs/AbilityInputComponent")
attack_manager = NodePath("../../../Components2D/PlayerAttackManager")

[node name="idle" type="Node" parent="Components/StateMachine" node_paths=PackedStringArray("walk", "jump", "fall", "dash")]
script = ExtResource("8_eankw")
walk = NodePath("../walk")
jump = NodePath("../jump")
fall = NodePath("../fall")
dash = NodePath("../dash")

[node name="jump" type="Node" parent="Components/StateMachine" node_paths=PackedStringArray("jump", "fall", "dash")]
script = ExtResource("9_4m1xy")
jump = NodePath(".")
fall = NodePath("../fall")
dash = NodePath("../dash")

[node name="walk" type="Node" parent="Components/StateMachine" node_paths=PackedStringArray("idle", "jump", "fall", "dash")]
script = ExtResource("10_03hiq")
idle = NodePath("../idle")
jump = NodePath("../jump")
fall = NodePath("../fall")
dash = NodePath("../dash")

[node name="ability" type="Node" parent="Components/StateMachine" node_paths=PackedStringArray("idle", "walk", "dash", "jump", "attack_manager", "state_machine")]
script = ExtResource("74_6efk3")
idle = NodePath("../idle")
walk = NodePath("../walk")
dash = NodePath("../dash")
jump = NodePath("../jump")
attack_manager = NodePath("../../../Components2D/PlayerAttackManager")
state_machine = NodePath("..")

[connection signal="item_rect_changed" from="Camera" to="Camera" method="_on_item_rect_changed"]
[connection signal="dir_changed" from="Components/Datas/MoveData" to="." method="_on_move_data_dir_changed"]
